# ralph-wiggum-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC.md  install.ps1  install.sh
.github/workflows/: build.yml
src/: claude.rs  cli.rs  config.rs  error.rs  events.rs  file_config.rs  icons.rs  main.rs  markdown.rs  output.rs  prompt.rs  state.rs  ui.rs
src/commands/: mod.rs
src/commands/mcp/: ask_user.rs  handlers.rs  middleware.rs  mod.rs  protocol.rs  router.rs  server.rs  session.rs  state.rs  tools.rs
src/commands/mcp/tui/: choice_select.rs  confirm_select.rs  mod.rs  multi_select.rs  text_input.rs
src/commands/run/: args.rs  config.rs  event_formatting.rs  events.rs  formatting_helpers.rs  mod.rs  once.rs  output.rs  promise.rs  runner.rs  state.rs  tool_formatting.rs  ui.rs
src/commands/task/: add.rs  args.rs  clean.rs  continue_cmd.rs  edit.rs  generate_deps_cmd.rs  input.rs  migrate.rs  mod.rs  plan.rs  prd.rs  state_helper.rs  status.rs
src/commands/task/orchestrate/: ai.rs  assignment.rs  cleanup.rs  completion_summary.rs  config.rs  dashboard.rs  dashboard_input.rs  dry_run.rs  events.rs  git_helpers.rs  integration_tests.rs  merge.rs  mod.rs  orchestrator.rs  orchestrator_events.rs  orchestrator_merge.rs  orchestrator_tui.rs  output.rs  panels.rs  ring_buffer.rs  run_loop.rs  scheduler.rs  shared_types.rs  shutdown_types.rs  state.rs  status.rs  summary.rs  task_preview.rs  verify.rs  worker.rs  worker_runner.rs  worker_status.rs  worktree.rs
src/commands/update/: mod.rs
src/shared/: banner.rs  claude.rs  dag.rs  error.rs  file_config.rs  icons.rs  markdown.rs  mcp.rs  mod.rs  progress.rs  tasks.rs
src/shared/tasks/: helpers.rs  mod.rs  node.rs  tree_ops.rs  validation.rs
src/templates/: add_prompt.md  add_prompt_yaml.md  changenotes.md  conflict_resolution_prompt.md  continue_system_prompt.md  deps_generation_prompt.md  deps_generation_prompt_yaml.md  edit_prompt.md  edit_prompt_yaml.md  implementation_issues.md  mod.rs  open_questions.md  plan_prompt.md  prd_prompt.md  prd_prompt_yaml.md  worker_implement_prompt.md  worker_review_prompt.md  worker_verify_prompt.md
src/updater/: executable_manager.rs  github_release.rs  mod.rs  platform_detector.rs  self_updater.rs  version_checker.rs
