[package]
name = "ralph-wiggum"
version = "0.1.0"
edition = "2024"
description = "Run claude in a loop until completion promise is found"
authors = ["nix"]

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# YAML frontmatter parsing
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1.40", features = ["full", "signal"] }

# Regex for promise matching
regex = "1.10"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time formatting
chrono = { version = "0.4", features = ["serde"] }

# TUI for status bar
ratatui = "0.29"
crossterm = "0.28"
