[package]
name = "ralph-wiggum"
version = "0.9.0"
edition = "2024"
description = "Run claude in a loop until completion promise is found"
authors = ["nix"]

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# YAML frontmatter parsing
serde_yaml = "0.9"

# TOML config file parsing
toml = "0.9"

# Async runtime
tokio = { version = "1.40", features = ["full", "signal"] }
tokio-util = "0.7"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time formatting
chrono = { version = "0.4", features = ["serde"] }

# TUI for status bar
ratatui = "0.30"
crossterm = "0.29"

# Markdown rendering in terminal
termimad = "0.34"

# Convert ANSI escape codes to ratatui Text
ansi-to-tui = "8"

# HTTP client for update checking and self-update
reqwest = { version = "0.13", features = ["json", "blocking", "rustls"], default-features = false }

# HTTP framework for Streamable HTTP MCP server
axum = { version = "0.8", features = ["json"] }

# Async stream generator for SSE heartbeat/response streams
async-stream = "0.3"

# Stream trait (futures_core::Stream) used by axum SSE
futures-core = "0.3"

# Unix process utilities (PID checking for lockfile)
libc = "0.2"

# UUID generation for MCP session IDs
uuid = { version = "1", features = ["v4"] }
urlencoding = "2.1.3"

# URL parsing for Origin header validation
url = "2.5"

[dev-dependencies]
tempfile = "3.25.0"
tower = { version = "0.5", features = ["util"] }
